--- a/index.html
+++ b/index.html
@@ -95,15 +95,8 @@
                   <p>Ménilmontant</p>
                 </div>
                 <form action="#">
-                  <input
-                    class="[ hidden ]"
-                    type="checkbox"
-                    id="like-la-palette-du-gout"
-                  />
-                  <label
-                    class="[ icon-checkbox-heart ]"
-                    for="like-la-palette-du-gout"
-                  ></label>
+                  <input class="[ hidden ]" type="checkbox" id="r_01" />
+                  <label class="[ icon-checkbox-heart ]" for="r_01"></label>
                 </form>
               </div>
               <a
@@ -135,20 +128,13 @@
                   <p>Charonne</p>
                 </div>
                 <form action="#">
-                  <input
-                    class="[ hidden ]"
-                    type="checkbox"
-                    id="like-la-note-enchantee"
-                  />
-                  <label
-                    class="[ icon-checkbox-heart ]"
-                    for="like-la-note-enchantee"
-                  ></label>
+                  <input class="[ hidden ]" type="checkbox" id="r_02" />
+                  <label class="[ icon-checkbox-heart ]" for="r_02"></label>
                 </form>
               </div>
               <a
                 class="link-to-page"
-                href="./restaurants/la-palette-du-gout.html"
+                href="./restaurants/res02-la-note-enchantee.html"
               ></a>
             </div>
             <div
@@ -174,20 +160,13 @@
                   <p>Cité Rouge</p>
                 </div>
                 <form action="#">
-                  <input
-                    class="[ hidden ]"
-                    type="checkbox"
-                    id="like-a-la-francaise"
-                  />
-                  <label
-                    class="[ icon-checkbox-heart ]"
-                    for="like-a-la-francaise"
-                  ></label>
+                  <input class="[ hidden ]" type="checkbox" id="r_03" />
+                  <label class="[ icon-checkbox-heart ]" for="r_03"></label>
                 </form>
               </div>
               <a
                 class="link-to-page"
-                href="./restaurants/la-palette-du-gout.html"
+                href="./restaurants/res03-a-la-francaise.html"
               ></a>
             </div>
             <div
@@ -213,20 +192,13 @@
                   <p>Folie-Méricourt</p>
                 </div>
                 <form action="#">
-                  <input
-                    class="[ hidden ]"
-                    type="checkbox"
-                    id="like-le-delice-des-sens"
-                  />
-                  <label
-                    class="[ icon-checkbox-heart ]"
-                    for="like-le-delice-des-sens"
-                  ></label>
+                  <input class="[ hidden ]" type="checkbox" id="r_04" />
+                  <label class="[ icon-checkbox-heart ]" for="r_04"></label>
                 </form>
               </div>
               <a
                 class="link-to-page"
-                href="./restaurants/la-palette-du-gout.html"
+                href="./restaurants/res04-le-delice-des-sens.html"
               ></a>
             </div>
           </div>
