--- a/restaurants/res02-la-note-enchantee.html
+++ b/restaurants/res02-la-note-enchantee.html
@@ -17,24 +17,24 @@
     <main class="main-content">
       <div class="hero">
         <img
-          src="../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
-          alt="La palette du goût"
+          src="./assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp"
+          alt="La note enchantée"
           srcset="
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp   756w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1008w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 1512w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-2268.webp 2268w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 3024w
+            ../assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-756.webp   756w,
+            ../assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-1008.webp 1008w,
+            ../assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-1512.webp 1512w,
+            ../assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-2268.webp 2268w,
+            ../assets/images/restaurants/La_note_enchantee/stil-u2Lp8tXIcjw-unsplash-3024.webp 3024w
           "
           sizes="100vw"
         />
       </div>
       <section class="menu [ bg-light | flow | rounded-border-600 ]">
         <div class="name [ flex-space-between | wrapper-p-width ]">
-          <h2>La palette du goût</h2>
+          <h2>La note enchantée</h2>
           <form action="#">
-            <input class="[ hidden ]" type="checkbox" id="r_01" />
-            <label class="[ icon-checkbox-heart ]" for="r_01"></label>
+            <input class="[ hidden ]" type="checkbox" id="r_02" />
+            <label class="[ icon-checkbox-heart ]" for="r_02"></label>
           </form>
         </div>
         <section class="meal-category [ flow | wrapper-p-width ]">
@@ -44,14 +44,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Fricassée d'escargots</p>
-                <p class="dish-info">Au piment d'Espelette</p>
+                <p class="dish-name">Ravioles de foie gras</p>
+                <p class="dish-info">Accompagnées de leur crème à la truffe</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">25€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010101" />
-                  <label for="d_010101"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020101" />
+                  <label for="d_020101"></label>
                 </form>
               </div>
             </li>
@@ -59,14 +59,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Foie gras de canard mi-cuit</p>
-                <p class="dish-info">Et ses copeaux de truffe noire</p>
+                <p class="dish-name">Caviar osciètre</p>
+                <p class="dish-info">Sur blini à la farine de blé noir</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">35€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010102" />
-                  <label for="d_010102"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020102" />
+                  <label for="d_020102"></label>
                 </form>
               </div>
             </li>
@@ -74,16 +74,29 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Œuf au plat</p>
-                <p class="dish-info">
-                  Assaisonné à la truffe sur lit de caviar
-                </p>
+                <p class="dish-name">Homard et espuma de potiron</p>
+                <p class="dish-info">Marinés aux zestes d'orange</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">20€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010103" />
-                  <label for="d_010103"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020103" />
+                  <label for="d_020103"></label>
+                </form>
+              </div>
+            </li>
+            <li
+              class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
+            >
+              <div class="left">
+                <p class="dish-name">Foie gras de canard cuit entier</p>
+                <p class="dish-info">Confiture de figue et pain toasté</p>
+              </div>
+              <div class="right [ flex-end ]">
+                <p class="dish-price">35€</p>
+                <form class="[ icon-circle-check ]" action="#">
+                  <input class="[ hidden ]" type="checkbox" id="d_020104" />
+                  <label for="d_020104"></label>
                 </form>
               </div>
             </li>
@@ -96,14 +109,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Filet de bœuf aux herbes</p>
-                <p class="dish-info">Accompagné de sa ribambelle de légumes</p>
+                <p class="dish-name">Noix de coquilles Saint-Jacques</p>
+                <p class="dish-info">Sur lit de purée de céleri-rave</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">40€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010201" />
-                  <label for="d_010201"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020201" />
+                  <label for="d_020201"></label>
                 </form>
               </div>
             </li>
@@ -111,16 +124,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Parmentier de queue de bœuf</p>
-                <p class="dish-info">
-                  À la truffe noire sur sa purée de panais
-                </p>
+                <p class="dish-name">Langoustine poêlée</p>
+                <p class="dish-info">Purée de patate douce</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">35€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010202" />
-                  <label for="d_010202"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020202" />
+                  <label for="d_020202"></label>
                 </form>
               </div>
             </li>
@@ -128,14 +139,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Filet de turbot</p>
-                <p class="dish-info">Aux agrumes</p>
+                <p class="dish-name">Mijoté de queue de bœuf</p>
+                <p class="dish-info">Et riz sauvage aux zestes de citron</p>
               </div>
               <div class="right [ flex-end ]">
-                <p class="dish-price">44€</p>
+                <p class="dish-price">45€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010203" />
-                  <label for="d_010203"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020203" />
+                  <label for="d_020203"></label>
                 </form>
               </div>
             </li>
@@ -148,14 +159,16 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Paris-Brest</p>
-                <p class="dish-info">Revisité</p>
+                <p class="dish-name">Macaron noisette et chocolat</p>
+                <p class="dish-info">
+                  Glace au caramel brun et sel de Guérande
+                </p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">18€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010301" />
-                  <label for="d_010301"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020301" />
+                  <label for="d_020301"></label>
                 </form>
               </div>
             </li>
@@ -163,14 +176,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Macaron au chocolat d'exception</p>
-                <p class="dish-info">Et glace à la vanille de Madagascar</p>
+                <p class="dish-name">Baba au rhum revisité</p>
+                <p class="dish-info">Avec son coulis de citron</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">22€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010302" />
-                  <label for="d_010302"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020302" />
+                  <label for="d_020302"></label>
                 </form>
               </div>
             </li>
@@ -178,16 +191,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Mousse au chocolat</p>
-                <p class="dish-info">
-                  Au piment d'Espelette et à la truffe noire
-                </p>
+                <p class="dish-name">Tarte au citron meringuée</p>
+                <p class="dish-info">Déstructurée</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">23€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010303" />
-                  <label for="d_010303"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_020303" />
+                  <label for="d_020303"></label>
                 </form>
               </div>
             </li>
