--- a/restaurants/res03-a-la-francaise.html
+++ b/restaurants/res03-a-la-francaise.html
@@ -17,24 +17,24 @@
     <main class="main-content">
       <div class="hero">
         <img
-          src="../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
-          alt="La palette du goût"
+          src="./assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp"
+          alt="À la française"
           srcset="
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp   756w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1008w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 1512w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-2268.webp 2268w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 3024w
+            ../assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-756.webp   756w,
+            ../assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-1008.webp 1008w,
+            ../assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-1512.webp 1512w,
+            ../assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-2268.webp 2268w,
+            ../assets/images/restaurants/A_la_française/toa-heftiba-DQKerTsQwi0-unsplash-3024.webp 3024w
           "
           sizes="100vw"
         />
       </div>
       <section class="menu [ bg-light | flow | rounded-border-600 ]">
         <div class="name [ flex-space-between | wrapper-p-width ]">
-          <h2>La palette du goût</h2>
+          <h2>À la française</h2>
           <form action="#">
-            <input class="[ hidden ]" type="checkbox" id="r_01" />
-            <label class="[ icon-checkbox-heart ]" for="r_01"></label>
+            <input class="[ hidden ]" type="checkbox" id="r_03" />
+            <label class="[ icon-checkbox-heart ]" for="r_03"></label>
           </form>
         </div>
         <section class="meal-category [ flow | wrapper-p-width ]">
@@ -44,14 +44,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Fricassée d'escargots</p>
-                <p class="dish-info">Au piment d'Espelette</p>
+                <p class="dish-name">Tartare de poulpe acidulé</p>
+                <p class="dish-info">Aux zestes d'orange</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">25€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010101" />
-                  <label for="d_010101"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030101" />
+                  <label for="d_030101"></label>
                 </form>
               </div>
             </li>
@@ -59,14 +59,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Foie gras de canard mi-cuit</p>
-                <p class="dish-info">Et ses copeaux de truffe noire</p>
+                <p class="dish-name">Velouté de légumes d'antan</p>
+                <p class="dish-info">Carotte, panais, topinambour</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">35€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010102" />
-                  <label for="d_010102"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030102" />
+                  <label for="d_030102"></label>
                 </form>
               </div>
             </li>
@@ -74,16 +74,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Œuf au plat</p>
-                <p class="dish-info">
-                  Assaisonné à la truffe sur lit de caviar
-                </p>
+                <p class="dish-name">Soupe à l'oignon</p>
+                <p class="dish-info">Revisitée</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">20€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010103" />
-                  <label for="d_010103"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030103" />
+                  <label for="d_030103"></label>
                 </form>
               </div>
             </li>
@@ -96,14 +94,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Filet de bœuf aux herbes</p>
-                <p class="dish-info">Accompagné de sa ribambelle de légumes</p>
+                <p class="dish-name">Coquilles Saint-Jacques</p>
+                <p class="dish-info">Accompagnées d'une purée de panais</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">40€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010201" />
-                  <label for="d_010201"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030201" />
+                  <label for="d_030201"></label>
                 </form>
               </div>
             </li>
@@ -111,16 +109,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Parmentier de queue de bœuf</p>
-                <p class="dish-info">
-                  À la truffe noire sur sa purée de panais
-                </p>
+                <p class="dish-name">Magret de canard</p>
+                <p class="dish-info">Et parmentier de pommes de terre</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">35€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010202" />
-                  <label for="d_010202"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030202" />
+                  <label for="d_030202"></label>
                 </form>
               </div>
             </li>
@@ -128,14 +124,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Filet de turbot</p>
-                <p class="dish-info">Aux agrumes</p>
+                <p class="dish-name">Pigeonneau d'Ille-et-Vilaine</p>
+                <p class="dish-info">Sur son lit de gnocchis aux légumes</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">44€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010203" />
-                  <label for="d_010203"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030203" />
+                  <label for="d_030203"></label>
                 </form>
               </div>
             </li>
@@ -148,14 +144,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Paris-Brest</p>
-                <p class="dish-info">Revisité</p>
+                <p class="dish-name">Pétales de violettes glacés</p>
+                <p class="dish-info">Et purée de noisettes</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">18€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010301" />
-                  <label for="d_010301"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030301" />
+                  <label for="d_030301"></label>
                 </form>
               </div>
             </li>
@@ -163,14 +159,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Macaron au chocolat d'exception</p>
-                <p class="dish-info">Et glace à la vanille de Madagascar</p>
+                <p class="dish-name">Fondant au chocolat</p>
+                <p class="dish-info">Revisité</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">22€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010302" />
-                  <label for="d_010302"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030302" />
+                  <label for="d_030302"></label>
                 </form>
               </div>
             </li>
@@ -178,16 +174,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Mousse au chocolat</p>
-                <p class="dish-info">
-                  Au piment d'Espelette et à la truffe noire
-                </p>
+                <p class="dish-name">Millefeuille croustillant</p>
+                <p class="dish-info">Myrtilles et pâte d'amande</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">23€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010303" />
-                  <label for="d_010303"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_030303" />
+                  <label for="d_030303"></label>
                 </form>
               </div>
             </li>
