--- a/restaurants/res04-le-delice-des-sens.html
+++ b/restaurants/res04-le-delice-des-sens.html
@@ -17,24 +17,24 @@
     <main class="main-content">
       <div class="hero">
         <img
-          src="../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp"
-          alt="La palette du goût"
+          src="./assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp"
+          alt="Le délice des sens"
           srcset="
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-756.webp   756w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1008.webp 1008w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-1512.webp 1512w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-2268.webp 2268w,
-            ../assets/images/restaurants/La_palette_du_goût/jay-wennington-N_Y88TWmGwA-unsplash-3024.webp 3024w
+            ../assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-756.webp   756w,
+            ../assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-1008.webp 1008w,
+            ../assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-1512.webp 1512w,
+            ../assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-2268.webp 2268w,
+            ../assets/images/restaurants/Le_delice_des_sens/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-3024.webp 3024w
           "
           sizes="100vw"
         />
       </div>
       <section class="menu [ bg-light | flow | rounded-border-600 ]">
         <div class="name [ flex-space-between | wrapper-p-width ]">
-          <h2>La palette du goût</h2>
+          <h2>Le délice des sens</h2>
           <form action="#">
-            <input class="[ hidden ]" type="checkbox" id="r_01" />
-            <label class="[ icon-checkbox-heart ]" for="r_01"></label>
+            <input class="[ hidden ]" type="checkbox" id="r_04" />
+            <label class="[ icon-checkbox-heart ]" for="r_04"></label>
           </form>
         </div>
         <section class="meal-category [ flow | wrapper-p-width ]">
@@ -44,14 +44,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Fricassée d'escargots</p>
-                <p class="dish-info">Au piment d'Espelette</p>
+                <p class="dish-name">Tartare de thon</p>
+                <p class="dish-info">Assaisonné au yuzu</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">25€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010101" />
-                  <label for="d_010101"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040101" />
+                  <label for="d_040101"></label>
                 </form>
               </div>
             </li>
@@ -59,14 +59,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Foie gras de canard mi-cuit</p>
-                <p class="dish-info">Et ses copeaux de truffe noire</p>
+                <p class="dish-name">Bouchée de homard croustillant</p>
+                <p class="dish-info">Et sa farandole de petits légumes</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">35€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010102" />
-                  <label for="d_010102"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040102" />
+                  <label for="d_040102"></label>
                 </form>
               </div>
             </li>
@@ -74,16 +74,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Œuf au plat</p>
-                <p class="dish-info">
-                  Assaisonné à la truffe sur lit de caviar
-                </p>
+                <p class="dish-name">Poulet rôti aux herbes de Provence</p>
+                <p class="dish-info">Et sa crème de truffe</p>
               </div>
               <div class="right [ flex-end ]">
-                <p class="dish-price">20€</p>
+                <p class="dish-price">40€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010103" />
-                  <label for="d_010103"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040103" />
+                  <label for="d_040103"></label>
                 </form>
               </div>
             </li>
@@ -96,14 +94,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Filet de bœuf aux herbes</p>
-                <p class="dish-info">Accompagné de sa ribambelle de légumes</p>
+                <p class="dish-name">Poulet rôti aux herbes de Provence</p>
+                <p class="dish-info">Et sa crème de truffe</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">40€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010201" />
-                  <label for="d_010201"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040201" />
+                  <label for="d_040201"></label>
                 </form>
               </div>
             </li>
@@ -111,16 +109,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Parmentier de queue de bœuf</p>
-                <p class="dish-info">
-                  À la truffe noire sur sa purée de panais
-                </p>
+                <p class="dish-name">Langouste rôtie</p>
+                <p class="dish-info">Et ses légumes de saison</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">35€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010202" />
-                  <label for="d_010202"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040202" />
+                  <label for="d_040202"></label>
                 </form>
               </div>
             </li>
@@ -128,14 +124,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Filet de turbot</p>
-                <p class="dish-info">Aux agrumes</p>
+                <p class="dish-name">Côte de bœuf Angus</p>
+                <p class="dish-info">Et sa purée de panais</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">44€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010203" />
-                  <label for="d_010203"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040203" />
+                  <label for="d_040203"></label>
                 </form>
               </div>
             </li>
@@ -148,14 +144,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Paris-Brest</p>
-                <p class="dish-info">Revisité</p>
+                <p class="dish-name">Farandole de desserts</p>
+                <p class="dish-info">Du chef</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">18€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010301" />
-                  <label for="d_010301"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040301" />
+                  <label for="d_040301"></label>
                 </form>
               </div>
             </li>
@@ -163,14 +159,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Macaron au chocolat d'exception</p>
-                <p class="dish-info">Et glace à la vanille de Madagascar</p>
+                <p class="dish-name">Crème brûlée</p>
+                <p class="dish-info">Revisité</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">22€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010302" />
-                  <label for="d_010302"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040302" />
+                  <label for="d_040302"></label>
                 </form>
               </div>
             </li>
@@ -178,16 +174,14 @@
               class="menu-item [ flex-space-between | bg-clear | rounded-border-400 | shadow-500 ]"
             >
               <div class="left">
-                <p class="dish-name">Mousse au chocolat</p>
-                <p class="dish-info">
-                  Au piment d'Espelette et à la truffe noire
-                </p>
+                <p class="dish-name">Tiramisu</p>
+                <p class="dish-info">À la noisette</p>
               </div>
               <div class="right [ flex-end ]">
                 <p class="dish-price">23€</p>
                 <form class="[ icon-circle-check ]" action="#">
-                  <input class="[ hidden ]" type="checkbox" id="d_010303" />
-                  <label for="d_010303"></label>
+                  <input class="[ hidden ]" type="checkbox" id="d_040303" />
+                  <label for="d_040303"></label>
                 </form>
               </div>
             </li>
